--- a/guli-gateway/pom.xml
+++ b/guli-gateway/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>guli</artifactId>
         <groupId>com.learn.guli</groupId>
@@ -9,27 +10,31 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>guli-product</artifactId>
-
-    <name>guli-product</name>
-    <description>产品模块</description>
+    <artifactId>guli-gateway</artifactId>
     
+    <name>guli-gateway</name>
+    <description>网关模块</description>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.learn.guli</groupId>
             <artifactId>guli-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
 </project>
